# factorio-mod-downloader

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.ps1  build.py  build.sh  build_rust.py  clean_rebuild.ps1  factorio-mod-downloader.spec  factorio_mod_downloader.spec  hook-factorio_mod_downloader_rust.py  main.py  performance_results.json  pyproject.toml  requirements.txt  test_performance.py  test_rust_import.py
.github/: FUNDING.yml
.kiro/specs/cli-update/: design.md  requirements.md  tasks.md
gui/: gui.py
mod_downloader/: mod_downloader.py  utils.py
src/: batch_download.rs  lib.rs  main_download.rs  shared.rs
src/factorio_mod_downloader/: __init__.py  __main__.py
src/factorio_mod_downloader/cli/: __init__.py  app.py  commands.py  error_formatter.py  output.py  parser.py  validators.py
src/factorio_mod_downloader/core/: __init__.py  dependency_resolver.py  downloader.py  file_downloader.py  mod_info_fetcher.py  rust_downloader.py
src/factorio_mod_downloader/downloader/: __init__.py  helpers.py  mod_downloader.py
src/factorio_mod_downloader/gui/: __init__.py  app.py  frames.py  utils.py
src/factorio_mod_downloader/infrastructure/: ERROR_HANDLING.md  __init__.py  config.py  errors.py  logger.py  recovery.py  registry.py
src/factorio_mod_downloader/mod_downloader/: __init__.py  mod_downloader.py
