[package]
name = "factorio_mod_downloader_rust"
version = "0.3.0"
edition = "2021"

[lib]
name = "factorio_mod_downloader_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "cookies", "gzip", "brotli", "deflate", "rustls-tls", "native-tls", "socks"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
indicatif = "0.17"
console = "0.15"
colored = "3.0.0"
clap = { version = "4.5", features = ["derive"] }
