[project]
name = "factorio-mod-downloader"
version = "0.2.2"
description = "One Downloader for all your factorio mods."
authors = [
    {name = "Vaibhav Vikas", email = "vbhvvikas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests>=2.32.3",
    "pillow>=11.0.0",
    "customtkinter>=5.2.2",
    "ctkmessagebox>=2.7",
    "beautifulsoup4>=4.12.3",
    "pylint>=3.3.1",
    "playwright>=1.48.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "pyinstaller>=6.13.0",
]

[project.scripts]
factorio-mod-downloader = "factorio_mod_downloader.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Keep your tool configs
[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.black]
line-length = 100
skip-string-normalization = false

[tool.pylint]
disable = ["missing-docstring"]